Todos los filtros actuan a traves de una funcion asincronica utlizando fetch

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a id="costoTotal" style="text-align: center;">Costo Total</a>
             <a style="text-align: center;" id="montoTotal"></a>
         </div>
+        <div>
+            <a id="botonPagar" style="text-align: center;">Pagar</a>
+        </div>
         
         
     </div>
