--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             <a id="costoTotal" style="text-align: center;">Costo Total</a>
             <a style="text-align: center;" id="montoTotal"></a>
         </div>
-        <div>
-            <a id="botonPagar" style="text-align: center;">Pagar</a>
+        <div style="display: flex; justify-content: center; padding-top: 10px;">
+            <div>
+                <button type="button" class="btn btn-light"><a href="pages/checkout.html" id="botonPagar" style="text-align: center; font-size: medium;">Pagar  <i class="fa fa-credit-card"></i></i></a></button>
+            </div>
         </div>
         
         
